--- a/css/style.css
+++ b/css/style.css
@@ -41,39 +41,57 @@ footer a:hover {
 }
 
 .intro {
+    background-image: url("images/computer.jpg");
     background-color: #415A77;
     color: #E0E1DD;
-    padding: 50px;    
+    padding: 50px;
+    position: relative; 
+    height: 300px;
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat;   
 }
 
+.img1 {
+    position: absolute;
+    top: 20px;
+    left: 200px; 
+    width: 250px; 
+    height: auto; 
+}
+
+.img2 {
+    position: absolute;
+    top: 20px; 
+    right: 200px; 
+    width: 250px;
+    height: auto; 
+}
+
+
 .intro h1 {
-    background-color: #0D1B2A;
-    border-radius: 5px;
-    padding: 10px;
     display: flex;
     justify-content: center;
+    font-size: xx-large;
 }
 
 .intro h2 {
-    background-color: #0D1B2A;
-    border-radius: 5px;
-    padding: 10px;
-    font-size: small;
     display: flex;
     justify-content: center;
-
+    font-size: xx-large;
 }
 
 .about-me {
     background-color: #415A77;
     color: #E0E1DD;
+    justify-content: center;
     padding: 50px;
     border-radius: 0 0 5px 5px; 
 }
 
 .me {
     position: relative;
-    top: -80px;
+    top: -190px;
     border-radius: 100%;
     display: block;
     margin-left: auto;
